RESOLVED FIXED195197
[ContentChangeObserver] ContentChangeObserver::StyleChangeScope should not set WKContentVisibilityChange directly
https://bugs.webkit.org/show_bug.cgi?id=195197
Summary [ContentChangeObserver] ContentChangeObserver::StyleChangeScope should not se...
alan
Reported 2019-02-28 19:18:52 PST
call ContentChangeObserver::didContentVisibilityChange instead
Attachments
Patch (2.98 KB, patch)
2019-02-28 19:23 PST, alan
simon.fraser: review+
Radar WebKit Bug Importer
Comment 1 2019-02-28 19:19:48 PST
alan
Comment 2 2019-02-28 19:23:07 PST
alan
Comment 3 2019-03-01 11:14:10 PST
Note You need to log in before you can comment on or make changes to this bug.