[ContentChangeObserver] ContentChangeObserver::StyleChangeScope should not set WKContentVisibilityChange directly https://bugs.webkit.org/show_bug.cgi?id=195197 <rdar://problem/48498332>

Reviewed by Simon Fraser.

Add didContentVisibilityChange to hide WKContentVisibilityChange value. We might also want to add some logic to didContentVisibilityChange at some point.

* page/ios/ContentChangeObserver.cpp:
(WebCore::ContentChangeObserver::didContentVisibilityChange):
(WebCore::ContentChangeObserver::StyleChangeScope::~StyleChangeScope):
* page/ios/ContentChangeObserver.h:

Canonical link: https://commits.webkit.org/209544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242271 268f45cc-cd09-0410-ab3c-d52691b4dbfc